K  5818	need simple way to override MIME type and encoding of attachment
K  5819	enable RFC 2231 support by default
K  5829	NullPointerException when accessing the content of a message attachment
K  5830	IMAPProtocol.sasllogin uses old constructor for IMAPSaslAuthenticator
K  5847	Exception when parsing bad address with unclosed quote in mail header


		  CHANGES IN THE 1.4.7 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.7 release.

K  5829	NullPointerException when accessing the content of a message attachment
K  5830	IMAPProtocol.sasllogin uses old constructor for IMAPSaslAuthenticator


		  CHANGES IN THE 1.4.6 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.6 release.

K  4906	IMAP Store socket leak on connect with ProtocolException
K  5086	STARTTLS when already using SSL may cause connection to fail
K  5090	Yahoo: Error reading emails containing "undisclosed recipients"
K  5233	Infinite loop if Quota information is not correctly reported by server
K  5816	Issue in decoding filename with charset iso-2022-jp from Mime header
	based on rfc 2231
<no id>	add mail.imap.ignorebodystructuresize to work around server bugs
<no id>	add "gimap" EXPERIMENTAL Gmail IMAP provider
<no id>	add isSSL() method to all protocol providers
<no id>	add support for debug output using java.util.logging
<no id>	avoid NullPointerException when encountering a bad Content-Type


		  CHANGES IN THE 1.4.5 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.5 release.

7021190	MimeMessage.setRecipients(type, String) does not accept null address
K  3815	ArrayIndexOutOfBoundsException for some IMAP protocol errors
K  4002	MultipartReport.setReport and setDeliveryStatus are broken
K  4065	Wrong representation of CR/LF are appended to the attachment
K  4296	SSL Re-Negotiation Problem with checkserveridentity=true
K  4511	Thread safety in javax.mail.PasswordAuthentication